--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,15 +18,9 @@ steps:
   env:
     CI: 'true'
 - task: PublishTestResults@2
-  displayName: 'Publish test results'
   inputs:
-    searchFolder: 'playwright-report'
     testResultsFormat: 'JUnit'
-    testResultsFiles: 'junit-results.xml'
-    mergeTestResults: true
-    failTaskOnFailedTests: true
-    testRunTitle: 'My End-To-End Tests'
-  condition: succeededOrFailed()
+    testResultsFiles: '**/junit-results.xml'
 - task: PublishPipelineArtifact@1
   inputs:
     targetPath: playwright-report
