--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,8 @@ steps:
   displayName: 'npm ci'
 - script: npx playwright install --with-deps
   displayName: 'Install Playwright browsers'
-- script: npx playwright test --project=$(BROWSER)
+- script: npx playwright test --project=chromium
+
   displayName: 'Run Playwright tests'
   env:
     CI: 'true'
