--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
     "dotenv": "^16.4.5",
+    "jsdom": "^25.0.1",
     "playwright-javascript-framework": "file:",
     "playwright-javascript-testing-framework": "file:"
   }
