--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 TEST_URL = https://freelance-learn-automation.vercel.app/
-EMAIL = admin@email.com
-PASSWORD = admin@123
+EMAIL = xxxx@xxx.com
+PASSWORD = xxxxxxx
