--- a/.github/workflows/regression-testing.yml
+++ b/.github/workflows/regression-testing.yml
@@ -32,7 +32,7 @@ jobs:
       uses: actions/upload-pages-artifact@v1
       with:
         # Upload entire repository
-        path: Playwright-Javascript-Framework/playwright-report/
+        path: playwright-report/index.html
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v1
