--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TEST_URL = https://freelance-learn-automation.vercel.app/
-EMAIL = admin@email.com
-PASSWORD = admin@123
+STAGE_URL = https://freelance-learn-automation.vercel.app/
+LOGIN_EMAIL = admin@email.com
+LOGIN_PASSWORD = admin@123
