--- a/.github/workflows/regression-testing.yml
+++ b/.github/workflows/regression-testing.yml
@@ -32,6 +32,11 @@ jobs:
 
     - name: Run Playwright tests
       run: npx playwright test --project=firefox
+      env:
+        LOGIN_EMAIL: ${{ secrets.LOGIN_EMAIL }}
+        LOGIN_PASSWORD: ${{ secrets.LOGIN_PASSWORD }}
+        STAGE_URL: ${{ secrets.STAGE_URL }}
+        
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
