--- a/.github/workflows/regression-testing.yml
+++ b/.github/workflows/regression-testing.yml
@@ -1,19 +1,25 @@
 name: Regression-Testing
+
 on:
   push:
-    branches: feature/feature-actions
+    branches: 
+      - feature/feature-actions
   pull_request:
-    branches: feature/feature-actions
+    branches: 
+      - feature/feature-actions
+
 permissions:
   contents: read
   id-token: write
-  pages: write # Add this line
+  pages: write
+
 jobs:
   regression-tests:
     timeout-minutes: 60
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
+
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
@@ -24,11 +30,11 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
 
-    - name: Set environment variables for login
+    - name: Set environment variables for login and STAGE_URL
       run: |
         echo "LOGIN_EMAIL=${{ secrets.LOGIN_EMAIL }}" >> $GITHUB_ENV
         echo "LOGIN_PASSWORD=${{ secrets.LOGIN_PASSWORD }}" >> $GITHUB_ENV
-        echo "STAGE_URL"=${{ secrets.STAGE_URL }}" >> $GITHUB_ENV
+        echo "STAGE_URL=${{ secrets.STAGE_URL }}" >> $GITHUB_ENV
 
     - name: Run Playwright tests
       run: npx playwright test --project=firefox
@@ -36,7 +42,7 @@ jobs:
         LOGIN_EMAIL: ${{ secrets.LOGIN_EMAIL }}
         LOGIN_PASSWORD: ${{ secrets.LOGIN_PASSWORD }}
         STAGE_URL: ${{ secrets.STAGE_URL }}
-        
+    
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
