--- a/.github/workflows/regression-testing.yml
+++ b/.github/workflows/regression-testing.yml
@@ -37,7 +37,7 @@ jobs:
         echo "STAGE_URL=${{ secrets.STAGE_URL }}" >> $GITHUB_ENV
 
     - name: Run Playwright tests
-      run: npx playwright test --project=firefox
+      run: npx playwright test --project=chromium
       env:
         LOGIN_EMAIL: ${{ secrets.LOGIN_EMAIL }}
         LOGIN_PASSWORD: ${{ secrets.LOGIN_PASSWORD }}
