--- a/.env.uat
+++ b/.env.uat
@@ -1,2 +1,4 @@
 # .env.uat
-BASE_URL=https://freelance-learn-automation-uat.vercel.app/
+BASE_URL=https://www.saucedemo.com/
+USERNAME=standard_user
+PASSWORD=secret_sauce
